--- a/entrypoints/options/index.html
+++ b/entrypoints/options/index.html
@@ -8,7 +8,7 @@
     <!-- <meta name="manifest.chrome_style" content="true" />
     <meta name="manifest.browser_style" content="true" /> -->
   </head>
-  <body>
+  <body class="vocabify">
     <div id="root"></div>
     <script type="module" src="./main.tsx"></script>
   </body>
