--- a/entrypoints/sidepanel/index.html
+++ b/entrypoints/sidepanel/index.html
@@ -6,7 +6,7 @@
     <title>Default Popup Title</title>
     <meta name="manifest.type" content="browser_action" />
   </head>
-  <body>
+  <body class="vocabify">
     <div id="root"></div>
     <script type="module" src="./main.tsx"></script>
   </body>
